# reflex-skeleton

./: README.md  default.nix  reflex.nix  skeleton.cabal  stack.yaml
Reflex/: Readme.md  Reflex.cabal  default.nix  reflex.nix
Reflex/apps/: Main.hs
Reflex/src/: RunSkeleton.hs  Skeleton.hs
apps/: RunSkeleton.hs
src/: Skeleton.hs
