name:                skeleton
version:             0.0.0.2
synopsis:            Skeleton
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           Copyright (c) 2019, Greg Horn
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  .gitignore
description: {
  reflexify me pls
}

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  exposed-modules:   Skeleton
  build-depends:     base >= 4.6.0.0
                     , dependent-sum
                     , glib
                     , gtk3 >= 0.14.2
                     , reflex
                     , transformers

  ghc-options:      -O2 -Wall
  ghc-prof-options: -O2 -Wall


executable run-skeleton
  buildable:           True
  hs-source-dirs:      apps
  main-is:             RunSkeleton.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.5 && < 5
                       , skeleton

  ghc-options:         -O2 -Wall -threaded "-with-rtsopts=-T -N2"
  ghc-prof-options:    -O2 -Wall -threaded "-with-rtsopts=-T -N2"
