name:                Reflex
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Guillaume Bouchard
maintainer:          guillaum.bouchard@gmail.com
copyright:           2019 Guillaume Bouchard
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:     RunSkeleton, Skeleton
  build-depends:       base
                     , reflex
                     , reflex-dom
                     , reflex-dom-core
                     , text
                     , jsaddle
  default-extensions:

  ghc-options: -Wall

  default-language:    Haskell2010
           
executable run-skeleton
  buildable:           True
  hs-source-dirs:      apps
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.5 && < 5
                       , Reflex

  ghc-options: -Wall